トップページ完成

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ package-lock.json
 # =========================
 # Gulp ビルド関連
 # =========================
-dist/             # 出力先（ビルド後に生成される）
+dist/
 build/
 .tmp/
 .cache/
